--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "mongoskin": "~1.4.4"
+    "mongoskin": "~1.4.4",
+    "angular-route": "~1.3.0"
   },
   "devDependencies": {
     "ejs": "~1.0.0",
